frank/editor-style.css
/* ... */
.column, #content-primary, .columns {
  margin-left: 4.4%;
  float: left;
  min-height: 1px;
  position: relative;
}

.column:first-child, #content-primary:first-child, .columns:first-child {
  margin-left: 0;
}

[class*="column"] + [class*="column"]:last-child {
  float: right;
}

.row .one {
  width: 4.3%;
}

.row .two {
  width: 13%;
}

.row .three {
  width: 21.679%;
}

.row .four {
  width: 30.37%;
}

.row .five {
  width: 39.1%;
}

.row .six {
  width: 47.8%;
}

.row .seven {
  width: 56.5%;
}

.row .eight {
  width: 65.2%;
}

.row .nine {
  width: 73.9%;
}

.row .ten {
  width: 82.6%;
}

.row .eleven {
  width: 91.3%;
}

.row .twelve {
  width: 100%;
}

.row .offset-by-one {
  margin-left: 13.1%;
}

.row .offset-by-two {
  margin-left: 21.8%;
}

.row .offset-by-three {
  margin-left: 30.5%;
}

.row .offset-by-four {
  margin-left: 39.2%;
}

.row .offset-by-five {
  margin-left: 47.9%;
}

.row .offset-by-six {
  margin-left: 56.6%;
}

.row .offset-by-seven {
  margin-left: 65.3%;
}

.row .offset-by-eight {
  margin-left: 74.0%;
}

.row .offset-by-nine {
  margin-left: 82.7%;
}

.row .offset-by-ten {
  margin-left: 91.4%;
}

.row .centered {
  float: none;
  margin: 0 auto;
}

.row .offset-by-one:first-child {
  margin-left: 8.7%;
}

.row .offset-by-two:first-child {
  margin-left: 17.4%;
}

.row .offset-by-three:first-child {
  margin-left: 26.1%;
}

.row .offset-by-four:first-child {
  margin-left: 34.8%;
}

.row .offset-by-five:first-child {
  margin-left: 43.5%;
}

.row .offset-by-six:first-child {
  margin-left: 52.2%;
}

.row .offset-by-seven:first-child {
  margin-left: 60.9%;
}

.row .offset-by-eight:first-child {
  margin-left: 69.6%;
}

.row .offset-by-nine:first-child {
  margin-left: 78.3%;
}

.row .offset-by-ten:first-child {
  margin-left: 87%;
}

.row .offset-by-eleven:first-child {
  margin-left: 95.7%;
}

/* Source Ordering */
.push-two {
  left: 17.4%;
}

.push-three {
  left: 26.1%;
}

.push-four {
  left: 34.8%;
}

.push-five {
  left: 43.5%;
}

.push-six {
  left: 52.2%;
}

.push-seven {
  left: 60.9%;
}

.push-eight {
  left: 69.6%;
}

.push-nine {
  left: 78.3%;
}

.push-ten {
  left: 87%;
}

.pull-two {
  right: 17.4%;
}

.pull-three {
  right: 26.1%;
}

.pull-four {
  right: 34.8%;
}

.pull-five {
  right: 43.5%;
}

.pull-six {
  right: 52.2%;
}

.pull-seven {
  right: 60.9%;
}

.pull-eight {
  right: 69.6%;
}

.pull-nine {
  right: 78.3%;
}

.pull-ten {
  right: 87%;
}

img, object, embed, video {
  max-width: 100%;
  height: auto;
}

/* Nicolas Gallagher's micro clearfix */
.row:before, .row:after, .clearfix:before, .clearfix:after {
  content: "";
  display: table;
}

.row:after, .clearfix:after {
  clear: both;
}

.row, .clearfix {
  zoom: 1;
}

/*	--------------------------------------------------
	:: Block grids
	
	These are 2-up, 3-up, 4-up and 5-up ULs, suited
	for repeating blocks of content. Add 'mobile' to
	them to switch them just like the layout grid
	(one item per line) on phones
	
	For IE7/8 compatibility block-grid items need to be
	the same height. You can optionally uncomment the
	lines below to support arbitrary height, but know
	that IE7/8 do not support :nth-child.
	-------------------------------------------------- */
.block-grid {
  display: block;
  overflow: hidden;
}

.block-grid > li {
  display: block;
  height: auto;
  float: left;
}

.block-grid.two-up {
  margin-left: -4%;
}

.block-grid.two-up > li {
  margin-left: 4%;
  width: 46%;
}

/* 	.block-grid.two-up>li:nth-child(2n+1) {clear: left;} */
.block-grid.three-up {
  margin-left: -2%;
}

.block-grid.three-up > li {
  margin-left: 2%;
  width: 31.3%;
}

/* 	.block-grid.three-up>li:nth-child(3n+1) {clear: left;} */
.block-grid.four-up {
  margin-left: -2%;
}

.block-grid.four-up > li {
  margin-left: 2%;
  width: 23%;
}

/* 	.block-grid.four-up>li:nth-child(4n+1) {clear: left;} */
.block-grid.five-up {
  margin-left: -1.5%;
}

.block-grid.five-up > li {
  margin-left: 1.5%;
  width: 18.5%;
}

/* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
/* --------------------------------------------------
	:: Grid
	-------------------------------------------------- */
/* Mobile */
@media only screen and (max-width: 767px) {
  body {
    -webkit-text-size-adjust: none;
    -ms-text-size-adjust: none;
    width: 100%;
    min-width: 0;
    margin-left: 0;
    margin-right: 0;
    padding-left: 0;
    padding-right: 0;
  }

  .container {
    min-width: 0;
    margin-left: 0;
    margin-right: 0;
  }

  .row {
    width: 100%;
    min-width: 0;
    margin-left: 0;
    margin-right: 0;
  }

  .row .row .column, .row .row #content-primary, .row .row .columns {
    padding: 0;
  }

  .column, #content-primary, .columns {
    width: auto !important;
    float: none;
    margin-left: 0;
    margin-right: 0;
  }

  .column:last-child, #content-primary:last-child, .columns:last-child {
    margin-right: 0;
    float: none;
  }

  [class*="column"] + [class*="column"]:last-child {
    float: none;
  }

  [class*="column"]:before, [class*="column"]:after {
    content: "";
    display: table;
  }

  [class*="column"]:after {
    clear: both;
  }

  .offset-by-one, .offset-by-two, .offset-by-three, .offset-by-four, .offset-by-five, .offset-by-six, .offset-by-seven, .offset-by-eight, .offset-by-nine, .offset-by-ten, .offset-by-eleven, .centered {
    margin-left: 0 !important;
  }

  .push-two, .push-three, .push-four, .push-five, .push-six, .push-seven, .push-eight, .push-nine, .push-ten {
    left: auto;
  }

  .pull-two, .pull-three, .pull-four, .pull-five, .pull-six, .pull-seven, .pull-eight, .pull-nine, .pull-ten {
    right: auto;
  }
}
/* --------------------------------------------------
	:: Block Grids
	-------------------------------------------------- */
@media only screen and (max-width: 767px) {
  .block-grid.mobile {
    margin-left: 0;
  }

  .block-grid.mobile > li {
    float: none;
    width: 100%;
    margin-left: 0;
  }
}
/* ... */

